[package]
name = "least"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.0-beta.0"
anyhow = "1.0.100"
bytecount = { version = "0.6.9", features = ["runtime-dispatch-simd"] }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
ratatui = "0.30.0-beta.0"

[patch.crates-io]
# TODO: Clean up and upstream patch for ANSI "Clear to End of Line" sequence
ansi-to-tui = { git = "https://github.com/evanrelf/ansi-to-tui.git", branch = "clear-to-eol" }

[lints]
clippy.pedantic = { level = "warn", priority = -1 }
